--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
   },
   "homepage": "https://github.com/gabuladze/vout#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "mongoose": "^4.5.4",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "pug": "^2.0.0-beta3"
   }
 }
