--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "flash": "^1.1.0",
     "mongoose": "^4.5.4",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
