--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "angular2-google-login": "^1.0.9",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "gapi": "0.0.3",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
