Uninstalled unneeded packages

--- a/package.json
+++ b/package.json
@@ -23,15 +23,11 @@
   },
   "homepage": "https://github.com/gabuladze/vout#readme",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cors": "^2.8.3",
     "express": "^4.14.0",
-    "express-session": "^1.14.0",
-    "flash": "^1.1.0",
     "mongoose": "^4.5.4",
     "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0",
-    "pug": "^2.0.0-beta3"
+    "passport-google-oauth": "^1.0.0"
   }
 }
